Acrescentando um novo texto

--- a/pag2.html
+++ b/pag2.html
@@ -27,6 +27,12 @@
         Pierrot estreou em outubro no mesmo ano. Fora do Japão, Black Clover é
         transmitido simultaneamente pelo Crunchyroll. 
         </p>
+        <p>
+            Nos Estados Unidos, o anime Black Clover vai estrear sua 4ª temporada em 19 de junho de 2021 
+            no bloco da Toonami no Adult Swim, do Cartoon Network. Dessa forma,
+             os sábados à noite dos fãs ficarão ainda melhor com a exibição dos últimos episódios da produção.
+              No Brasil, Black Clover também está disponível no Crunchyroll, contando com opções legendadas e dubladas.
+        </p>
 
     </div>
     <div id="flex">
