Alterações feita para adicionar mais um texto a pagina

--- a/pag2.html
+++ b/pag2.html
@@ -14,6 +14,7 @@
     <h1>Black Clover</h1>
 
     <div id="grid">
+        <div>
         <p>
             Black Clover é uma série de mangá shonen de fantasia escrita e ilustrada
         por Yūki Tabata. A série é publicada na revista Weekly Shōnen Jump da
@@ -27,13 +28,15 @@
         Pierrot estreou em outubro no mesmo ano. Fora do Japão, Black Clover é
         transmitido simultaneamente pelo Crunchyroll. 
         </p>
+        </div>
+        <div>
         <p>
             Nos Estados Unidos, o anime Black Clover vai estrear sua 4ª temporada em 19 de junho de 2021 
             no bloco da Toonami no Adult Swim, do Cartoon Network. Dessa forma,
              os sábados à noite dos fãs ficarão ainda melhor com a exibição dos últimos episódios da produção.
               No Brasil, Black Clover também está disponível no Crunchyroll, contando com opções legendadas e dubladas.
         </p>
-
+        </div>
     </div>
     <div id="flex">
 
